@@ -82,7 +82,7 @@ int main(int argc,char**argv)
   //
   for (unsigned int ifile=0;ifile<inputs.size();ifile++) {
     
-    unsigned pos    = inputs[ifile].find(":");
+    size_t pos      = inputs[ifile].find(":");
     string sample   = inputs[ifile].substr(0,pos);
     string filename = datapath+"/"+sample;
     if (filename.find(".root")==string::npos) filename += ".root";
@@ -369,7 +369,7 @@ string get_legend_title(const string& alg)
   string reco[5] = { "gen",   "calo",   "pf",      "trk",      "jpt" };
   string RECO[5] = { "(Gen)", "(Calo)", "(PFlow)", "(Tracks)", "(JPT)" };
 
-  string::size_type pos=string::npos; int ireco=-1;
+  size_t pos=string::npos; int ireco=-1;
   while (pos==string::npos&&ireco<4) { pos = tmp.find(reco[++ireco]); }
   if (pos==string::npos) return alg;
   
